--- a/css/body.css
+++ b/css/body.css
@@ -1,13 +1,24 @@
-div{
-  padding: 80px 40px 160px;
+
+.wrapper{
+  padding: 0px 40px;
 }
 
+.page-title{
+  color: black;
+  font-size: 25px;
+  padding:
+}
 
-p{
+/* div{
+  padding: 80px 40px 160px;
+} */
+
+
+/* p{
   color: black;
   font: 12px;
   margin: 0px 0px;
-}
+} */
 
 .members{
   width: 30%;
@@ -20,9 +31,9 @@ p{
 }
 
 
-
+/* 
 .picture {
   width: 313.48px;
   height: 313.48px;
   margin: 0px 0px 10px;
-}
+} */
