--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
   display:flex;
   justify-content: space-between;
   bottom:20px;
-  position:absolute;
+  /* position:absolute; */
   left:0;
   right:0;
   z-index: 1;
