--- a/css/body.css
+++ b/css/body.css
@@ -8,12 +8,29 @@
   font-size: 25px;
   padding-top: 30px;
 }
+.introduction-cards{
+  display: flex;
+  flex-flow: wrap;
+}
 
+.introduction-card{
+  display: flex;
+  flex-direction: column;
+}
 
+.introduction-picture{
+  width: 250px;
+  height: auto;
+  margin: 30px 5px 10px 0px;
+}
+
+.introduction{
+  font-size: 12px;
+}
 
 .members{
-  width: 30%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
 }
 
 .members:hover{
