--- a/css/transition.css
+++ b/css/transition.css
@@ -1,16 +1,24 @@
-.product_wrapper {
+.member-tittle {
+    font-size: 3rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+.member-wrapper {
     display: flex;
     max-width: 800px;
     justify-content: space-between;
 }
 
-.product_img_wrapper {
-    width: 100%;
-    margin-right: 5rem;
+.member-img-wrapper {
+    padding: 2rem;
 }
 
-.product_img {
+.member-img {
 width: 100%;
 height: 100%;
+border-radius: 10%;
+}
+.member-information {
+    font-size: 1rem;
 }
 
