--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 .footer{
   display:flex;
   justify-content: space-between;
-  bottom:20px;
-  /* position:absolute; */
+  bottom:0px;
+  position:absolute;
   left:0;
   right:0;
   z-index: 1;
