--- a/css/body.css
+++ b/css/body.css
@@ -1,75 +1,78 @@
-
-.wrapper{
+.wrapper {
   padding: 0px 40px;
 }
 
-.page-title{
+.page-title {
   color: black;
   font-size: 25px;
   margin: 30px 0px;
 }
 
-.introduction-cards{
+.introduction-cards {
   display: flex;
   flex-flow: wrap;
   justify-content: space-evenly;
 }
 
-.introduction-card{
+.introduction-card {
   display: flex;
   flex-direction: column;
+  opacity: 1;
 }
 
-.introduction-picture{
+.introduction-card.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  padding: 0;
+}
+
+.introduction-picture {
   width: 250px;
   height: auto;
   margin: 30px 30px 10px 0px;
   -webkit-transform: rotate(0) scale(1);
   transform: rotate(0) scale(1);
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.introduction-picture:hover  {
+.introduction-picture:hover {
   -webkit-transform: rotate(0) scale(1);
   transform: rotate(0) scale(1);
   -webkit-transform: rotate(5deg) scale(1.1);
   transform: rotate(5deg) scale(1.1);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
-
-.introduction{
+.introduction {
   font-size: 12px;
 }
 
 .introduction-name {
-font-size: 1.2rem;
-font-family: 'Zen Kurenaido', sans-serif;
+  font-size: 1.2rem;
+  font-family: "Zen Kurenaido", sans-serif;
 }
 .introduction-grade {
-font-size: 1.1rem;
-font-family: 'Zen Kurenaido', sans-serif;
+  font-size: 1.1rem;
+  font-family: "Zen Kurenaido", sans-serif;
 }
-.members{
+.members {
   width: 100%;
   height: 100%;
 }
 
-.members:hover{
+.members:hover {
   opacity: 0.6;
   transition-duration: 0.9s;
 }
 
-
-
-
-
-
 /* view more ボタン */
-.more{
+.more {
   height: 10em;
   position: relative;
+  text-align: center;
+  margin-top: 20px;
 }
 .view-more-button {
   width: 250px;
@@ -80,18 +83,16 @@ font-family: 'Zen Kurenaido', sans-serif;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  background-color:#AAC8EC ;
-  transition: .7s;
-
+  background-color: #aac8ec;
+  transition: 0.7s;
 }
-.view-more-button:hover  {
+.view-more-button:hover {
   opacity: 0.3;
-  transition: .5s;
+  transition: 0.5s;
 }
-.hide-view-more-button{
+.hide-view-more-button {
   display: none;
 }
-
 
 /* Communityのページ */
 .table {
@@ -119,7 +120,8 @@ font-family: 'Zen Kurenaido', sans-serif;
   text-align: left;
 }
 @media all and (max-width: 767px) {
-  .table th, .table td {
+  .table th,
+  .table td {
     display: block;
     width: 100%;
     border-bottom: none;
