--- a/css/body.css
+++ b/css/body.css
@@ -1,3 +1,7 @@
+html{
+  font-size: 1vw;
+}
+
 .wrapper {
   padding: 0px 40px;
 }
@@ -9,14 +13,19 @@
 }
 
 .introduction-cards {
+  width: 100%;
+  height: auto;
   display: flex;
   flex-flow: wrap;
   justify-content: space-evenly;
 }
 
 .introduction-card {
+  width: 19%;
+  height: 25%;
   display: flex;
   flex-direction: column;
+  margin: 2% 3%;
   opacity: 1;
 }
 
@@ -28,12 +37,20 @@
 }
 
 .introduction-picture {
-  width: 250px;
-  height: auto;
+  width: 100%;
+  min-width: auto;
+  height: 100%;
+  min-height: auto;
   margin: 30px 30px 10px 0px;
   -webkit-transform: rotate(0) scale(1);
   transform: rotate(0) scale(1);
   transition: 0.5s;
+}
+
+.introduction-picture img{
+  max-width: 100%;
+  height: auto;
+  width:auto;
 }
 
 .introduction-picture:hover {
@@ -43,10 +60,6 @@
   transform: rotate(5deg) scale(1.1);
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-}
-
-.introduction {
-  font-size: 12px;
 }
 
 .introduction-name {
@@ -65,6 +78,69 @@
 .members:hover {
   opacity: 0.6;
   transition-duration: 0.9s;
+}
+
+@media screen and (max-width: 900px) {
+  .introduction-card {
+    width: 40%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    margin: 2% 3%;
+    opacity: 1;
+  }
+  
+  .introduction-card.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    padding: 0;
+  }
+  
+  .introduction-picture {
+    width: 100%;
+    min-width: auto;
+    height: 100%;
+    min-height: auto;
+    margin: 30px 30px 10px 0px;
+    -webkit-transform: rotate(0) scale(1);
+    transform: rotate(0) scale(1);
+    transition: 0.5s;
+  }
+  
+  .introduction-picture img{
+    max-width: 100%;
+    height: auto;
+    width:auto;
+  }
+  
+  .introduction-picture:hover {
+    -webkit-transform: rotate(0) scale(1);
+    transform: rotate(0) scale(1);
+    -webkit-transform: rotate(5deg) scale(1.1);
+    transform: rotate(5deg) scale(1.1);
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+  }
+  
+  .introduction-name {
+    font-size: 1.2rem;
+    font-family: "Zen Kurenaido", sans-serif;
+  }
+  .introduction-grade {
+    font-size: 1.1rem;
+    font-family: "Zen Kurenaido", sans-serif;
+  }
+  .members {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .members:hover {
+    opacity: 0.6;
+    transition-duration: 0.9s;
+  }
+  
 }
 
 /* view more ボタン */
