--- a/css/header.css
+++ b/css/header.css
@@ -3,28 +3,43 @@
   font-size: 25px;
 } */
 
-.header {
+
+.header{
+  width: 100%;
+  height: 10%;
   background-color: #aac8ec;
-  display: flex;
-  justify-content: space-between;
-  height: 150px;
-}
-.header div {
-  height: 150px;
-  padding: 0;
+  position: fixed;
+  z-index: 100;
 }
 
-.header-letter {
-  font-size: 50px;
-  margin-top: 50px;
-  margin-left: 20px;
-  padding: 0;
+.header-inner {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: 50px;
+  margin-right: 80px;
+  /* ↑これごり押しすぎて良いかわからん。 */
+}
+.header-content{
+  float: left;
+  
+}
+
+
+.header-logo {
+  height: 
+}
+.header-logo img{
+  height: ;
+}
+
+.hamburger-wrapper{
+  float: right;
+
+
 }
 
 #hamburger {
-  margin-top: 50px;
-  margin-right: 20px;
-  padding: 0;
+  padding: 0px;
   display: block;
   position: relative;
   width: 50px;
