--- a/css/body.css
+++ b/css/body.css
@@ -80,6 +80,89 @@ html{
   transition-duration: 0.9s;
 }
 
+
+/* view more ボタン */
+.more {
+  height: 10em;
+  position: relative;
+  text-align: center;
+  margin-top: -100px;
+  margin-bottom: 50px;
+}
+.view-more-button {
+  border: 2px solid slategrey;
+  border-radius: 100%;
+  width: 5rem;
+  height: 5rem;
+  margin: 0;
+  position: relative;
+  left: 47%;
+  bottom: 50%;
+  display: flex;
+  margin-right: -50%;
+  /* transform: translate(-50%, -50%);
+  background-color: #aac8ec;
+  transition: 0.7s; */
+}
+.view-more-button:hover {
+  /* left: -70px;
+  transition-property: left;
+  transition-duration: 100s; */
+  opacity: 0.3;
+  transition: 0.5s;
+}
+.hide-view-more-button {
+  display: none;
+}
+.angles{
+  width: 50%;
+  height: 50%;
+  position: relative;
+  left: 1.25rem;
+  top: 1.15rem;
+}
+.view-more-JPN{
+  display: none;
+  position: relative;
+  top: 10px;
+}
+/* Communityのページ */
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-size: 14px;
+}
+.table th {
+  width: 22%;
+  background: #aac8ec;
+  border: 1px solid #888482;
+  box-sizing: border-box;
+  padding: 15px;
+  vertical-align: middle;
+  font-weight: bold;
+  text-align: center;
+}
+.table td {
+  background: #fff;
+  border: 1px solid #888482;
+  box-sizing: border-box;
+  padding: 15px;
+  vertical-align: top;
+  text-align: left;
+}
+@media all and (max-width: 767px) {
+  .table th,
+  .table td {
+    display: block;
+    width: 100%;
+    border-bottom: none;
+  }
+  .table tr:last-child td:last-child {
+    border-bottom: 1px solid #888482;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .introduction-card {
     width: 40%;
@@ -141,68 +224,43 @@ html{
     transition-duration: 0.9s;
   }
   
-}
-
-/* view more ボタン */
-.more {
-  height: 10em;
-  position: relative;
-  text-align: center;
-  margin-top: 20px;
-}
-.view-more-button {
-  width: 250px;
-  height: 50px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  background-color: #aac8ec;
-  transition: 0.7s;
-}
-.view-more-button:hover {
-  opacity: 0.3;
-  transition: 0.5s;
-}
-.hide-view-more-button {
-  display: none;
-}
-
-/* Communityのページ */
-.table {
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
-  font-size: 14px;
-}
-.table th {
-  width: 22%;
-  background: #aac8ec;
-  border: 1px solid #888482;
-  box-sizing: border-box;
-  padding: 15px;
-  vertical-align: middle;
-  font-weight: bold;
-  text-align: center;
-}
-.table td {
-  background: #fff;
-  border: 1px solid #888482;
-  box-sizing: border-box;
-  padding: 15px;
-  vertical-align: top;
-  text-align: left;
-}
-@media all and (max-width: 767px) {
-  .table th,
-  .table td {
-    display: block;
-    width: 100%;
-    border-bottom: none;
+  .more {
+    height: 10em;
+    position: relative;
+    text-align: center;
+    margin-top: -100px;
+    margin-bottom: 50px;
   }
-  .table tr:last-child td:last-child {
-    border-bottom: 1px solid #888482;
+  .view-more-button {
+    border: 2px solid slategrey;
+    border-radius: 100%;
+    width: 10rem;
+    height: 10rem;
+    margin: 0;
+    position: relative;
+    left: 44%;
+    bottom: 50%;
+    display: flex;
+    margin-right: -50%;
+    /* transform: translate(-50%, -50%);
+    background-color: #aac8ec;
+    transition: 0.7s; */
+  }
+  .view-more-button:hover {
+    /* left: -70px;
+    transition-property: left;
+    transition-duration: 100s; */
+    opacity: 0.3;
+    transition: 0.5s;
+  }
+  .hide-view-more-button {
+    display: none;
+  }
+  .angles{
+    width: 50%;
+    height: 50%;
+    position: relative;
+    left: 2.4rem;
+    top: 2.2rem;
   }
 }
