--- a/css/body.css
+++ b/css/body.css
@@ -1,4 +1,4 @@
-html{
+html {
   font-size: 1vw;
 }
 
@@ -47,10 +47,10 @@ html{
   transition: 0.5s;
 }
 
-.introduction-picture img{
+.introduction-picture img {
   max-width: 100%;
   height: auto;
-  width:auto;
+  width: auto;
 }
 
 .introduction-picture:hover {
@@ -66,7 +66,7 @@ html{
   font-size: 1.2rem;
   font-family: "Zen Kurenaido", sans-serif;
 }
-.introduction-grade {
+.introduction-kanji {
   font-size: 1.1rem;
   font-family: "Zen Kurenaido", sans-serif;
 }
@@ -79,7 +79,6 @@ html{
   opacity: 0.6;
   transition-duration: 0.9s;
 }
-
 
 /* view more ボタン */
 .more {
@@ -100,7 +99,7 @@ html{
 .hide-view-more-button {
   display: none;
 }
-.angles{
+.angles {
   width: 50%;
   height: 50%;
   position: relative;
@@ -174,10 +173,10 @@ html{
     transition: 0.5s;
   }
 
-  .introduction-picture img{
+  .introduction-picture img {
     max-width: 100%;
     height: auto;
-    width:auto;
+    width: auto;
   }
 
   .introduction-picture:hover {
@@ -193,7 +192,7 @@ html{
     font-size: 1.2rem;
     font-family: "Zen Kurenaido", sans-serif;
   }
-  .introduction-grade {
+  .introduction-kanji {
     font-size: 1.1rem;
     font-family: "Zen Kurenaido", sans-serif;
   }
@@ -206,7 +205,6 @@ html{
     opacity: 0.6;
     transition-duration: 0.9s;
   }
-
 }
 
 /* view more ボタン */
@@ -220,7 +218,7 @@ html{
   margin: 0;
   transform: translate(-50%, -50%);
   background-color: #aac8ec;
-  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.5);
+  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.5);
   transition: 0.7s;
   border-radius: 100%;
   width: 5rem;
@@ -234,7 +232,6 @@ html{
   opacity: 0.3;
   transition: 0.5s;
 }
-
 
 .hide-view-more-button {
   display: none;
@@ -270,9 +267,10 @@ html{
   .table td {
     display: block;
     width: 100%;
-    border-bottom: none;}
+    border-bottom: none;
+  }
 
-  .more{
+  .more {
     height: 10em;
     position: relative;
     text-align: center;
@@ -305,7 +303,7 @@ html{
   .hide-view-more-button {
     display: none;
   }
-  .angles{
+  .angles {
     width: 50%;
     height: 50%;
     position: relative;
