--- a/css/body.css
+++ b/css/body.css
@@ -6,6 +6,10 @@ html {
   padding: 0px 40px;
 }
 
+.main-inner{
+  padding-top: 125px;
+}
+
 .page-title {
   color: black;
   font-size: 25px;
@@ -106,8 +110,17 @@ html {
   top: 1.15rem;
   color: #333;
 }
-
+/* Aboutのページ */
+.about-contents{
+  margin: 60px 0px;
+}
+.about-contents p{
+  font-size: 15px;
+} 
 /* Communityのページ */
+.community-contents div{
+  margin: 60px 0px;
+}
 .table {
   width: 100%;
   border-collapse: collapse;
