--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,15 @@ html {
   }
 }
 /*# sourceMappingURL=style.css.map */
+@media screen and (max-width: 768px) {
+  .box {
+    height: 100px;
+  }
+  .wave {
+    height: 350px;
+  }
+  .title {
+    font-size: 12px;
+    line-height: 100px;
+  }
+}
